crates/embucket-functions/src/tests/string_binary/snapshots/hex_encode/query_hex_encode_ascii_range.snap
---
source: crates/embucket-functions/src/tests/string_binary/hex_encode.rs
description: "\"SELECT\n        HEX_ENCODE('!\\\"#$%&''()*+,-./0123456789:;<=>?@ABCDEFGHIJKLMNOPQRSTUVWXYZ[\\\\]^_`abcdefghijklmnopqrstuvwxyz{|}~') AS all_printable\""
---
Ok(
    [
        "+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+",
        "| all_printable                                                                                                                                                                                |",
        "+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+",
        "| 2122232425262728292A2B2C2D2E2F303132333435363738393A3B3C3D3E3F404142434445464748494A4B4C4D4E4F505152535455565758595A5B5C5D5E5F606162636465666768696A6B6C6D6E6F707172737475767778797A7B7C7D7E |",
        "+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+",
    ],
)
