crates/embucket-functions/src/tests/string_binary/snapshots/hex_encode/query_hex_encode_basic_string_lowercase.snap
---
source: crates/embucket-functions/src/tests/string_binary/hex_encode.rs
description: "\"SELECT HEX_ENCODE('SNOW', 0) AS hex_value\""
---
Ok(
    [
        "+-----------+",
        "| hex_value |",
        "+-----------+",
        "| 534e4f57  |",
        "+-----------+",
    ],
)
