crates/embucket-functions/src/tests/string_binary/snapshots/hex_encode/query_hex_encode_empty_string.snap
---
source: crates/embucket-functions/src/tests/string_binary/hex_encode.rs
description: "\"SELECT HEX_ENCODE('') AS hex_value\""
---
Ok(
    [
        "+-----------+",
        "| hex_value |",
        "+-----------+",
        "|           |",
        "+-----------+",
    ],
)
