crates/embucket-functions/src/tests/string_binary/snapshots/hex_encode/query_hex_encode_invalid_case_negative.snap
---
source: crates/embucket-functions/src/tests/string_binary/hex_encode.rs
description: "\"SELECT HEX_ENCODE('test', -1) AS hex_value\""
---
Ok(
    [
        "+-----------+",
        "| hex_value |",
        "+-----------+",
        "| 74657374  |",
        "+-----------+",
    ],
)
