crates/embucket-functions/src/tests/string_binary/snapshots/hex_encode/query_hex_encode_long_string.snap
---
source: crates/embucket-functions/src/tests/string_binary/hex_encode.rs
description: "\"SELECT HEX_ENCODE('The quick brown fox jumps over the lazy dog') AS hex_value\""
---
Ok(
    [
        "+----------------------------------------------------------------------------------------+",
        "| hex_value                                                                              |",
        "+----------------------------------------------------------------------------------------+",
        "| 54686520717569636B2062726F776E20666F78206A756D7073206F76657220746865206C617A7920646F67 |",
        "+----------------------------------------------------------------------------------------+",
    ],
)
