crates/embucket-functions/src/tests/string_binary/snapshots/hex_encode/query_hex_encode_null_input.snap
---
source: crates/embucket-functions/src/tests/string_binary/hex_encode.rs
description: "\"SELECT HEX_ENCODE(NULL) AS hex_value\""
---
Ok(
    [
        "+-----------+",
        "| hex_value |",
        "+-----------+",
        "|           |",
        "+-----------+",
    ],
)
